variable naming fixes, added dn_pp_04, first analysis of PPI results'

--- a/connectivity_analysis/signal_extraction/dn_sa_03_roi_construction.ipynb
+++ b/connectivity_analysis/signal_extraction/dn_sa_03_roi_construction.ipynb
@@ -183,9 +183,9 @@
    "outputs": [],
    "source": [
     "# Aggregate all ROIs\n",
-    "df_aggregated = pd.concat([df_inc, df_dec])\n",
-    "df_aggregated.reset_index(inplace=True, drop=True)\n",
-    "df_aggregated['approxRadius'] = df_aggregated['Cluster Size (mm3)'].map(\n",
+    "df_custom = pd.concat([df_inc, df_dec])\n",
+    "df_custom.reset_index(inplace=True, drop=True)\n",
+    "df_custom['approxRadius'] = df_custom['Cluster Size (mm3)'].map(\n",
     "    sphere_radius)"
    ]
   },
@@ -208,15 +208,15 @@
     }
    ],
    "source": [
-    "n_rois = len(df_aggregated)\n",
+    "n_rois = len(df_custom)\n",
     "\n",
     "distance_matrix = np.zeros((n_rois, n_rois))\n",
     "\n",
     "for i in range(n_rois):\n",
     "    for j in range(i, n_rois):\n",
     "        distance_matrix[i, j] = distance(\n",
-    "            df_aggregated.loc[i, ['X', 'Y', 'Z']],\n",
-    "            df_aggregated.loc[j, ['X', 'Y', 'Z']]\n",
+    "            df_custom.loc[i, ['X', 'Y', 'Z']],\n",
+    "            df_custom.loc[j, ['X', 'Y', 'Z']]\n",
     "        )\n",
     "distance_matrix = distance_matrix + distance_matrix.T        \n",
     "        \n",
@@ -237,8 +237,8 @@
     "        \n",
     "ax.set_xticks(np.arange(n_rois))\n",
     "ax.set_yticks(np.arange(n_rois))\n",
-    "ax.set_yticklabels(df_aggregated['Regions'] + ' ' + df_aggregated['Hemisphere'])\n",
-    "ax.set_xticklabels(df_aggregated['Regions'] + ' ' + df_aggregated['Hemisphere'])\n",
+    "ax.set_yticklabels(df_custom['Regions'] + ' ' + df_custom['Hemisphere'])\n",
+    "ax.set_xticklabels(df_custom['Regions'] + ' ' + df_custom['Hemisphere'])\n",
     "plt.setp(ax.get_xticklabels(), rotation=45, ha=\"right\", rotation_mode=\"anchor\")\n",
     "ax.set_title('Distance matrix for ROIs')\n",
     "plt.show()"
@@ -262,10 +262,10 @@
    ],
    "source": [
     "adjacency_matrix = np.zeros((n_rois, n_rois))\n",
-    "node_coords = np.array(df_aggregated.loc[:, ['X', 'Y', 'Z']])\n",
-    "node_color = df_aggregated['netName'].map(lambda net: 'blue' \n",
+    "node_coords = np.array(df_custom.loc[:, ['X', 'Y', 'Z']])\n",
+    "node_color = df_custom['netName'].map(lambda net: 'blue' \n",
     "                                          if net == 'perr_dec' else 'red')\n",
-    "node_size = df_aggregated['approxRadius'].map(lambda size: int(size) * 6)\n",
+    "node_size = df_custom['approxRadius'].map(lambda size: int(size) * 6)\n",
     "\n",
     "plot_connectome(\n",
     "    adjacency_matrix=adjacency_matrix,\n",
@@ -284,11 +284,11 @@
    "outputs": [],
    "source": [
     "# Prepare \"atlas\" for signal extraction \n",
-    "df_aggregated['radius(mm)'] = 4\n",
-    "df_aggregated.rename(columns={cut.upper(): cut for cut in 'xyz'}, inplace=True)\n",
+    "df_custom['radius(mm)'] = 4\n",
+    "df_custom.rename(columns={cut.upper(): cut for cut in 'xyz'}, inplace=True)\n",
     "\n",
     "# Save custom atlas\n",
-    "df_aggregated.to_csv(os.path.join(path_custom_roi, 'custom_roi_table.csv'), \n",
+    "df_custom.to_csv(os.path.join(path_custom_roi, 'custom_roi_table.csv'), \n",
     "                     sep=' ', index=False)"
    ]
   }
