extended dn_pp_02, minor code formatting changes in behavioral analysis notebooks

--- a/behavioral_analysis/matjags-dn/dn_bm_04_parameter_estimation.ipynb
+++ b/behavioral_analysis/matjags-dn/dn_bm_04_parameter_estimation.ipynb
@@ -140,15 +140,19 @@
     "    # Learning rates\n",
     "    for j in range(n_prederrsign):\n",
     "        kde.fit(alpha_pdci[:, sub, j].flatten()[:, np.newaxis])\n",
-    "        alpha_pdci_mle[sub, j] = gridpoints[np.argmax(kde.score_samples(gridpoints[:, np.newaxis]))]\n",
+    "        alpha_pdci_mle[sub, j] = gridpoints[np.argmax(\n",
+    "            kde.score_samples(gridpoints[:, np.newaxis]))]\n",
     "    \n",
     "    # Precision\n",
     "    kde.fit(beta_pdci[:, sub].reshape((n_samples * n_chains, 1)))\n",
-    "    beta_pdci_mle[sub] = gridpoints[np.argmax(kde.score_samples(gridpoints[:, np.newaxis]))]\n",
+    "    beta_pdci_mle[sub] = gridpoints[np.argmax(\n",
+    "        kde.score_samples(gridpoints[:, np.newaxis]))]\n",
     "    \n",
     "# Save to file\n",
-    "np.save(os.path.join(path_out, 'parameter_estimates/alpha_pdci_mle_3digits'), alpha_pdci_mle)\n",
-    "np.save(os.path.join(path_out, 'parameter_estimates/beta_pdci_mle_3digits'), beta_pdci_mle)"
+    "np.save(os.path.join(path_out, 'parameter_estimates/alpha_pdci_mle_3digits'), \n",
+    "        alpha_pdci_mle)\n",
+    "np.save(os.path.join(path_out, 'parameter_estimates/beta_pdci_mle_3digits'), \n",
+    "        beta_pdci_mle)"
    ]
   },
   {
@@ -214,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
