minor changes in connectivity_analysis notebooks

--- a/activation_analysis/dn_aa_05_results_reporting.ipynb
+++ b/activation_analysis/dn_aa_05_results_reporting.ipynb
@@ -325,6 +325,8 @@
     "bar_ylim = (-2, 3.25)\n",
     "bar_width = 0.3\n",
     "bar_colors = ['#f49915', '#5E88CA']\n",
+    "# blue variants 33% ligher #93afdb 66% lighter #c8d6ec\n",
+    "# orange variants 33% lighter #F7BA62 66% lighter #FBDCAF \n",
     "bar_bracket_offset = 0.03 \n",
     "\n",
     "fig_legend_position = [1.1, 0.75]\n",
