major refactoring, reworked connectivity analisis

--- a/activation_analysis/dn_aa_05_results_reporting.ipynb
+++ b/activation_analysis/dn_aa_05_results_reporting.ipynb
@@ -15,16 +15,29 @@
     "> Warning! To reproduce this analysis use nilearn version > 0.7.0 which incorporates nistats functions\n",
     "\n",
     "---\n",
-    "**Last update**: 04.08.2020 "
+    "**Last update**: 03.11.2020 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kmb/Desktop/Neuroscience/Projects/BONNA_decide_net/code/dn_utils/glm_utils.py:13: UserWarning: \n",
+      "\n",
+      " | Using Nistats with Nilearn versions >= 0.7.0 is redundant and potentially conflicting.\n",
+      " | Nilearn versions 0.7.0 and up offer all the functionality of Nistats as well the latest features and fixes.\n",
+      " | We strongly recommend uninstalling Nistats and using Nilearn's stats & reporting modules.\n",
+      "\n",
+      "  from nistats import design_matrix\n"
+     ]
+    }
+   ],
    "source": [
-    "%matplotlib inline\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as ss\n",
@@ -45,12 +58,14 @@
     "    sys.path.append(path_code)\n",
     "from dn_utils.glm_utils import (add_clusters_labels, load_first_level_stat_maps,\n",
     "    extract_img_value_for_mni_coords)\n",
-    "from dn_utils.plotting import barplot_annotate_brackets"
+    "from dn_utils.plotting import barplot_annotate_brackets\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,8 +340,6 @@
     "bar_ylim = (-2, 3.25)\n",
     "bar_width = 0.3\n",
     "bar_colors = ['#f49915', '#5E88CA']\n",
-    "# blue variants 33% ligher #93afdb 66% lighter #c8d6ec\n",
-    "# orange variants 33% lighter #F7BA62 66% lighter #FBDCAF \n",
     "bar_bracket_offset = 0.03 \n",
     "\n",
     "fig_legend_position = [1.1, 0.75]\n",
@@ -391,7 +404,6 @@
     ")\n",
     "\n",
     "plt.subplots_adjust(wspace=fig_subplots_gap)\n",
-    "\n",
     "fig.savefig(\n",
     "    os.path.join(path_out, 'peaks_perr_rew_minus_pun_alpha_0_001.svg'),\n",
     "    bbox_inches='tight'\n",
@@ -400,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
