--- a/behavioral_analysis/matjags-dn/dn_bm_02_model_selection.ipynb
+++ b/behavioral_analysis/matjags-dn/dn_bm_02_model_selection.ipynb
@@ -343,7 +343,8 @@
     }
    ],
    "source": [
-    "mat = scipy.io.loadmat(os.path.join(path_vba, 'pep_HLM_sequential_split.mat'), squeeze_me=True)\n",
+    "mat = scipy.io.loadmat(os.path.join(path_vba, 'pep_HLM_sequential_split.mat'), \n",
+    "                       squeeze_me=True)\n",
     "\n",
     "print(f'pep(PICI) = {mat[\"pep\"][modelnames.index(\"PICI\")]}')\n",
     "print(f'pep(PICD) = {mat[\"pep\"][modelnames.index(\"PICD\")]}')\n",
