fixed bugs in ppi analysis

--- a/connectivity_analysis/ppi/dn_pp_01_ppi_linear_model.ipynb
+++ b/connectivity_analysis/ppi/dn_pp_01_ppi_linear_model.ipynb
@@ -221,45 +221,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create design matrix"
+    "#### Create design matrix\n",
+    "\n",
+    "> Note that for different subject / task entities design matrix may have or not have two additional regressors (miss for decision onset and miss for decision offset). Some subjects didn't miss any response."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Relevant regressors to save (regressors that all models have)\n",
+    "beta_names = ['physio', \n",
+    "              'out_ons', 'out_perr', \n",
+    "              'ppi_out_ons', 'ppi_out_perr', \n",
+    "              'dec_ons', 'dec_wcor', \n",
+    "              'res_lbp', 'res_rbp',\n",
+    "              'out_off', \n",
+    "              'reg_intercept']\n",
+    "\n",
+    "# Keys are all regressors (even miss regressors which some of participants may \n",
+    "# not have)\n",
+    "beta_colors = {\n",
+    "    'physio': 'tab:red', \n",
+    "    'out_ons': 'tab:blue',\n",
+    "    'out_perr': 'tab:purple',\n",
+    "    'ppi_out_ons': 'tab:green',\n",
+    "    'ppi_out_perr': 'tab:orange',\n",
+    "    'dec_ons': 'tab:blue',\n",
+    "    'dec_miss': 'tab:blue',\n",
+    "    'dec_wcor':'tab:purple',\n",
+    "    'res_lbp': 'tab:blue',\n",
+    "    'res_rbp': 'tab:blue',\n",
+    "    'res_miss': 'tab:blue',\n",
+    "    'out_off': 'tab:blue',\n",
+    "    'reg_intercept': 'tab:gray'\n",
+    "}\n",
+    "\n",
+    "n_regressors = len(beta_names)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving sub-m02_task-rew_betamats.npy\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (11) into shape (13)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-85158bbf364b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    164\u001b[0m                 \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 166\u001b[0;31m                 \u001b[0mbeta_mats\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx_target\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx_seed\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    167\u001b[0m                 \u001b[0;31m#pval_mats[:, idx_target, idx_seed] = results.pvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m                 \u001b[0;31m#tval_mats[:, idx_target, idx_seed] = results.tvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not broadcast input array from shape (11) into shape (13)"
+      "saving sub-m02_task-rew_betamats.npy\n",
+      "saving sub-m03_task-rew_betamats.npy\n",
+      "saving sub-m04_task-rew_betamats.npy\n",
+      "saving sub-m05_task-rew_betamats.npy\n",
+      "saving sub-m06_task-rew_betamats.npy\n",
+      "saving sub-m07_task-rew_betamats.npy\n",
+      "saving sub-m08_task-rew_betamats.npy\n",
+      "saving sub-m09_task-rew_betamats.npy\n",
+      "saving sub-m10_task-rew_betamats.npy\n",
+      "saving sub-m11_task-rew_betamats.npy\n",
+      "saving sub-m12_task-rew_betamats.npy\n",
+      "saving sub-m13_task-rew_betamats.npy\n",
+      "saving sub-m14_task-rew_betamats.npy\n",
+      "saving sub-m15_task-rew_betamats.npy\n",
+      "saving sub-m16_task-rew_betamats.npy\n",
+      "saving sub-m17_task-rew_betamats.npy\n",
+      "saving sub-m18_task-rew_betamats.npy\n",
+      "saving sub-m19_task-rew_betamats.npy\n",
+      "saving sub-m20_task-rew_betamats.npy\n",
+      "saving sub-m21_task-rew_betamats.npy\n",
+      "saving sub-m22_task-rew_betamats.npy\n",
+      "saving sub-m23_task-rew_betamats.npy\n",
+      "saving sub-m24_task-rew_betamats.npy\n",
+      "saving sub-m25_task-rew_betamats.npy\n",
+      "saving sub-m26_task-rew_betamats.npy\n",
+      "saving sub-m27_task-rew_betamats.npy\n",
+      "saving sub-m28_task-rew_betamats.npy\n",
+      "saving sub-m29_task-rew_betamats.npy\n",
+      "saving sub-m30_task-rew_betamats.npy\n",
+      "saving sub-m31_task-rew_betamats.npy\n",
+      "saving sub-m32_task-rew_betamats.npy\n",
+      "saving sub-m33_task-rew_betamats.npy\n",
+      "saving sub-m02_task-pun_betamats.npy\n",
+      "saving sub-m03_task-pun_betamats.npy\n",
+      "saving sub-m04_task-pun_betamats.npy\n",
+      "saving sub-m05_task-pun_betamats.npy\n",
+      "saving sub-m06_task-pun_betamats.npy\n",
+      "saving sub-m07_task-pun_betamats.npy\n",
+      "saving sub-m08_task-pun_betamats.npy\n",
+      "saving sub-m09_task-pun_betamats.npy\n",
+      "saving sub-m10_task-pun_betamats.npy\n",
+      "saving sub-m11_task-pun_betamats.npy\n",
+      "saving sub-m12_task-pun_betamats.npy\n",
+      "saving sub-m13_task-pun_betamats.npy\n",
+      "saving sub-m14_task-pun_betamats.npy\n",
+      "saving sub-m15_task-pun_betamats.npy\n",
+      "saving sub-m16_task-pun_betamats.npy\n",
+      "saving sub-m17_task-pun_betamats.npy\n",
+      "saving sub-m18_task-pun_betamats.npy\n",
+      "saving sub-m19_task-pun_betamats.npy\n",
+      "saving sub-m20_task-pun_betamats.npy\n",
+      "saving sub-m21_task-pun_betamats.npy\n",
+      "saving sub-m22_task-pun_betamats.npy\n",
+      "saving sub-m23_task-pun_betamats.npy\n",
+      "saving sub-m24_task-pun_betamats.npy\n",
+      "saving sub-m25_task-pun_betamats.npy\n",
+      "saving sub-m26_task-pun_betamats.npy\n",
+      "saving sub-m27_task-pun_betamats.npy\n",
+      "saving sub-m28_task-pun_betamats.npy\n",
+      "saving sub-m29_task-pun_betamats.npy\n",
+      "saving sub-m30_task-pun_betamats.npy\n",
+      "saving sub-m31_task-pun_betamats.npy\n",
+      "saving sub-m32_task-pun_betamats.npy\n",
+      "saving sub-m33_task-pun_betamats.npy\n"
      ]
     }
    ],
    "source": [
-    "beta_names = [\n",
-    "    'physio', \n",
-    "    'out_ons', 'out_perr', \n",
-    "    'ppi_out_ons', 'ppi_out_perr', \n",
-    "    'dec_ons' 'dec_wcor' \n",
-    "    'res_lbp', 'res_rbp',\n",
-    "    'out_off', \n",
-    "    'reg_intercept'\n",
-    "]\n",
-    "n_regressors = len(beta_names)  \n",
-    "\n",
     "for con, con_name in enumerate(meta['dim2']):\n",
     "    for sub, sub_name in enumerate(meta['dim1']):\n",
     "\n",
@@ -388,13 +467,6 @@
     "            Xstd = (X - X.mean()) / X.std()\n",
     "            Xstd['reg_intercept'] = np.ones(n_volumes)\n",
     "            \n",
-    "            # Create matrices for data storage\n",
-    "            beta_names = list(Xstd.columns)\n",
-    "            beta_colors = [\n",
-    "               'tab:red', 'tab:blue', 'tab:purple', 'tab:green', 'tab:orange',\n",
-    "               'tab:blue', 'tab:blue', 'tab:purple', 'tab:blue', 'tab:blue', \n",
-    "               'tab:blue', 'tab:blue', 'tab:gray']\n",
-    "\n",
     "            # Save design matrix plot and regressor correlation plot\n",
     "            dm_plot_fname = os.path.join(\n",
     "                path_save_dm, \n",
@@ -407,9 +479,15 @@
     "                + '_regcorrplot.png'\n",
     "            )\n",
     "            plot_design_matrix(\n",
-    "                Xstd, colors=beta_colors, output_file=dm_plot_fname)\n",
+    "                Xstd, \n",
+    "                colors=[beta_colors[c] for c in Xstd.columns],\n",
+    "                output_file=dm_plot_fname\n",
+    "            )\n",
     "            plot_regressors_correlation(\n",
-    "                Xstd, colors=beta_colors, output_file=reg_corr_plot_fname)\n",
+    "                Xstd, \n",
+    "                colors=[beta_colors[c] for c in Xstd.columns], \n",
+    "                output_file=reg_corr_plot_fname\n",
+    "            )\n",
     "            \n",
     "            for idx_target in range(n_rois):        \n",
     "                \n",
@@ -423,9 +501,9 @@
     "                model = sm.OLS(y, Xstd, hasconst=True)\n",
     "                results = model.fit()\n",
     "                \n",
-    "                beta_mats[:, idx_target, idx_seed] = results.params\n",
-    "                #pval_mats[:, idx_target, idx_seed] = results.pvalues\n",
-    "                #tval_mats[:, idx_target, idx_seed] = results.tvalues\n",
+    "                beta_mats[:, idx_target, idx_seed] = results.params.loc[beta_names]\n",
+    "                #pval_mats[:, idx_target, idx_seed] = results.pvalues.loc[beta_names]\n",
+    "                #tval_mats[:, idx_target, idx_seed] = results.tvalues.loc[beta_names]\n",
     "                \n",
     "                \n",
     "        # Save beta estimates\n",
