added script for beta-series GLM calculation (LSS method)

--- a/connectivity_analysis/bsc/dn_bs_01_beta_series_glm.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_01_beta_series_glm.ipynb
@@ -2,28 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from os.path import join \n",
     "import json\n",
+    "import os\n",
+    "import sys\n",
+    "from os.path import join\n",
+    "from pathlib import Path\n",
     "\n",
     "import nibabel as nib\n",
-    "from nilearn.plotting import plot_stat_map, plot_anat, plot_img, show\n",
-    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "from nistats.first_level_model import FirstLevelModel\n",
-    "from nistats.reporting import plot_design_matrix, make_glm_report\n",
-    "from nistats.thresholding import map_threshold\n",
-    "from nistats.design_matrix import make_first_level_design_matrix\n",
     "\n",
     "path_root = os.environ.get('DECIDENET_PATH')\n",
-    "path_code = os.path.join(path_root, 'code')\n",
+    "path_code = join(path_root, 'code')\n",
     "if path_code not in sys.path:\n",
     "    sys.path.append(path_code)\n",
     "from dn_utils.behavioral_models import load_behavioral_data                    \n",
@@ -34,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,27 +37,22 @@
     "path_derivatives = join(path_root, 'data/main_fmri_study/derivatives') \n",
     "\n",
     "path_data_paths = join(path_derivatives, 'data_paths')\n",
-    "path_beh = join(path_sourcedata, 'behavioral')"
+    "path_modulations = join(path_derivatives, 'nistats/modulations')\n",
+    "path_beh = join(path_sourcedata, 'behavioral')\n",
+    "path_bsc = join(path_derivatives, 'bsc')\n",
+    "\n",
+    "path_out = join(path_bsc, 'betamaps')\n",
+    "Path(path_out).mkdir(exist_ok=True, parents=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape of beh array: (32, 2, 110, 23)\n",
-      "Conditions [(0, 'rew'), (1, 'pun')]\n",
-      "Columns: [(0, 'block'), (1, 'block_bci'), (2, 'side'), (3, 'side_bci'), (4, 'magn_left'), (5, 'magn_right'), (6, 'response'), (7, 'rt'), (8, 'won_bool'), (9, 'won_magn'), (10, 'acc_after_trial'), (11, 'onset_iti'), (12, 'onset_iti_plan'), (13, 'onset_iti_glob'), (14, 'onset_dec'), (15, 'onset_dec_plan'), (16, 'onset_dec_glob'), (17, 'onset_isi'), (18, 'onset_isi_plan'), (19, 'onset_isi_glob'), (20, 'onset_out'), (21, 'onset_out_plan'), (22, 'onset_out_glob')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load behavioral data\n",
-    "beh, meta = load_behavioral_data(path=path_beh)\n",
+    "beh, meta = load_behavioral_data(path=path_beh, verbose=False)\n",
     "\n",
     "# Load path to data files\n",
     "with open(join(path_data_paths, 'fmri_filenames.json'), 'r') as f:\n",
@@ -70,17 +60,26 @@
     "with open(join(path_data_paths, 'conf_filenames.json'), 'r') as f:\n",
     "    conf_files = json.loads(f.read())\n",
     "with open(join(path_data_paths, 'mask_filenames.json'), 'r') as f:\n",
-    "    mask_files = json.loads(f.read())    "
+    "    mask_files = json.loads(f.read())    \n",
+    "    \n",
+    "# Load parametric modulations\n",
+    "modulations_wcor = np.load(os.path.join(path_modulations,'modulations_wcor.npy'))\n",
+    "modulations_exvl = np.load(os.path.join(path_modulations,'modulations_exvl.npy'))\n",
+    "modulations_perr = np.load(os.path.join(path_modulations,'modulations_perr.npy'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Times of image acquisition in seconds\n",
-    "n_scans, t_r = 730, 2\n",
+    "n_scans = 730\n",
+    "n_trials = 110\n",
+    "t_r = 2\n",
+    "t_dec = 1.5\n",
+    "t_out = 1.5\n",
     "frame_times = np.arange(n_scans) * t_r\n",
     "\n",
     "# GLM parameters\n",
@@ -92,47 +91,135 @@
     "    'high_pass': 0.0078125, \n",
     "    'standardize': True,\n",
     "    'smoothing_fwhm': 6,\n",
+    "    'n_jobs': -1,\n",
     "}\n",
     "\n",
-    "# Later loop over these\n",
-    "sub, sub_idx = 'm02', 0\n",
-    "con, con_idx = 'prlrew', 0\n",
-    "trial = 0"
+    "regressors_model = [\n",
+    "    \"reg_dec_ons\", \"reg_dec_miss\", \"reg_dec_wcor\", \n",
+    "    \"reg_res_lbp\", \"reg_res_rbp\", \"reg_res_miss\", \n",
+    "    \"reg_out_individual\", \"reg_out_perr_pos\", \"reg_out_perr_neg\"\n",
+    "]\n",
+    "regressors_save = [\"reg_out_individual\"]\n",
+    "\n",
+    "# Store settings in JSON file\n",
+    "with open(join(path_out, 'options_betamaps.json'), 'w') as json_file:    \n",
+    "    json.dump(dict(\n",
+    "        regressors_model=regressors_model,\n",
+    "        regressors_save=regressors_save,\n",
+    "        **glm_kwargs\n",
+    "    ), json_file, sort_keys=False, indent=4)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load subject data\n",
-    "fmri_img = nib.load(fmri_files[con][sub_idx])\n",
+    "for sub_idx, sub in enumerate(meta['dim1']):\n",
+    "    for con_idx, con in enumerate(meta['dim2']):\n",
+    "        \n",
+    "        con_name = 'prl' + con\n",
     "\n",
-    "confounds = pd.read_csv(conf_files[con][sub_idx], sep='\\t')\n",
-    "confounds = confounds.filter(regex='trans|rot')\n",
-    "confounds.index = frame_times # Standard time representation (in seconds)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'rew'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "con_label"
+    "        # Load subject data\n",
+    "        fmri_img = nib.load(fmri_files[con_name][sub_idx])\n",
+    "        confounds = pd.read_csv(conf_files[con_name][sub_idx], sep='\\t')\n",
+    "        confounds = confounds.filter(regex='trans|rot')\n",
+    "        confounds.index = frame_times\n",
+    "\n",
+    "        # Specify GLM\n",
+    "        fmri_glm = FirstLevelModel(\n",
+    "            **glm_kwargs,\n",
+    "            mask_img=nib.load(mask_files[con_name][sub_idx]),\n",
+    "            subject_label=sub,\n",
+    "        )\n",
+    "\n",
+    "        # Setup events\n",
+    "        resp_type = beh[sub_idx, con_idx, :, meta['dim4'].index('response')]\n",
+    "        onset_dec = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] \n",
+    "        onset_res = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_dec')] + \\\n",
+    "                    beh[sub_idx, con_idx, :, meta['dim4'].index('rt')]\n",
+    "        onset_out = beh[sub_idx, con_idx, :, meta['dim4'].index('onset_out')]\n",
+    "        offset_dec = onset_dec + t_dec\n",
+    "        offset_out = onset_out + t_out\n",
+    "\n",
+    "        # Calculate modulations\n",
+    "        modulation_wcor = modulations_wcor[sub_idx, con_idx, resp_type != 0]\n",
+    "        modulation_exvl = modulations_exvl[sub_idx, con_idx, resp_type != 0]\n",
+    "        modulation_perr = modulations_perr[sub_idx, con_idx]\n",
+    "        modulation_wcor_demeaned = modulation_wcor - np.mean(modulation_wcor)\n",
+    "        modulation_exvl_demeaned = modulation_exvl - np.mean(modulation_exvl)\n",
+    "        modulation_perr_demeaned = modulation_perr - np.mean(modulation_perr)\n",
+    "\n",
+    "        # Decision phase regressors\n",
+    "        reg_dec_ons = Regressor('dec_ons', frame_times, \n",
+    "                                onset_dec[resp_type != 0])\n",
+    "        reg_dec_miss = Regressor('dec_miss', frame_times, \n",
+    "                                 onset_dec[resp_type == 0])\n",
+    "        reg_dec_wcor = Regressor('dec_wcor', frame_times, \n",
+    "                                 onset_dec[resp_type != 0],\n",
+    "                                 modulation=modulation_wcor_demeaned)\n",
+    "\n",
+    "        # Response phase regressors\n",
+    "        reg_res_lbp = Regressor('res_lbp', frame_times, \n",
+    "                                onset_res[resp_type == -1])\n",
+    "        reg_res_rbp = Regressor('res_rbp', frame_times, \n",
+    "                                onset_res[resp_type == 1])\n",
+    "        reg_res_miss = Regressor('res_miss', frame_times, \n",
+    "                                 offset_dec[resp_type == 0])\n",
+    "\n",
+    "        stat_maps = []\n",
+    "\n",
+    "        for trial in range(n_trials):\n",
+    "            print(f'Subject: {sub} | Condition: {con} | Trial: {trial+1}')\n",
+    "\n",
+    "            # Split outcome events into three categories:\n",
+    "            #    trials_individual: \n",
+    "            #        single separated trial\n",
+    "            #    trials_perr_pos: \n",
+    "            #        remaining trials with positive PE\n",
+    "            #    trials_perr_neg: \n",
+    "            #        remaining trials with negative PE\n",
+    "            won_bool = beh[sub_idx, con_idx, :, meta['dim4'].index('won_bool')]\n",
+    "            trials_individual = np.zeros((n_trials), dtype=bool)\n",
+    "            trials_perr_pos = won_bool.astype(bool)\n",
+    "            trials_perr_neg = ~trials_perr_pos\n",
+    "            trials_individual[trial] = True\n",
+    "            trials_perr_pos[trial] = False\n",
+    "            trials_perr_neg[trial] = False\n",
+    "\n",
+    "            # Outcome phase regressors\n",
+    "            reg_out_individual = Regressor(\n",
+    "                'out_individual', frame_times, onset_dec[trials_individual])\n",
+    "            reg_out_perr_pos = Regressor(\n",
+    "                'out_perr_pos', frame_times, onset_out[trials_perr_pos])\n",
+    "            reg_out_perr_neg = Regressor(\n",
+    "                'out_perr_neg', frame_times, onset_out[trials_perr_neg])\n",
+    "\n",
+    "            # Create design matrix\n",
+    "            regressors = [\n",
+    "                reg_dec_ons, reg_dec_miss, reg_dec_wcor, \n",
+    "                reg_res_lbp, reg_res_rbp, reg_res_miss, \n",
+    "                reg_out_individual, reg_out_perr_pos, reg_out_perr_neg\n",
+    "            ]\n",
+    "            dm, conditions = my_make_first_level_design_matrix(regressors)\n",
+    "\n",
+    "            # Fit GLM\n",
+    "            fmri_glm = fmri_glm.fit(fmri_img, confounds=confounds, \n",
+    "                                    design_matrices=dm)\n",
+    "\n",
+    "            # Define contrast & compute statistical map\n",
+    "            stat_map = fmri_glm.compute_contrast(\n",
+    "                    conditions['out_individual'], \n",
+    "                    stat_type='t',\n",
+    "                    output_type='z_score'\n",
+    "            )\n",
+    "            stat_maps.append(stat_map)\n",
+    "\n",
+    "        # Save concatenated betamaps\n",
+    "        betamaps_img = nib.concat_images(stat_maps)\n",
+    "        fname = f'sub-{sub}_task-{con}_betamaps.nii.gz'\n",
+    "        nib.save(betamaps_img, join(path_out, fname))  "
    ]
   }
  ],
