added beta-series correlation notebooks

--- a/connectivity_analysis/bsc/dn_bs_01_beta_series_glm.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_01_beta_series_glm.ipynb
@@ -16,11 +16,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from nistats.first_level_model import FirstLevelModel\n",
-    "\n",
-    "path_root = os.environ.get('DECIDENET_PATH')\n",
-    "path_code = join(path_root, 'code')\n",
-    "if path_code not in sys.path:\n",
-    "    sys.path.append(path_code)\n",
     "from dn_utils.behavioral_models import load_behavioral_data                    \n",
     "from dn_utils.glm_utils import Regressor, my_make_first_level_design_matrix\n",
     "\n",
@@ -33,6 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "path_root = os.environ.get('DECIDENET_PATH')\n",
+    "\n",
     "path_sourcedata = join(path_root, 'data/main_fmri_study/sourcedata')\n",
     "path_derivatives = join(path_root, 'data/main_fmri_study/derivatives') \n",
     "\n",
@@ -94,6 +91,7 @@
     "    'n_jobs': -1,\n",
     "}\n",
     "\n",
+    "# Only used to save as options\n",
     "regressors_model = [\n",
     "    \"reg_dec_ons\", \"reg_dec_miss\", \"reg_dec_wcor\", \n",
     "    \"reg_res_lbp\", \"reg_res_rbp\", \"reg_res_miss\", \n",
@@ -211,14 +209,14 @@
     "            # Define contrast & compute statistical map\n",
     "            stat_map = fmri_glm.compute_contrast(\n",
     "                    conditions['out_individual'], \n",
-    "                    stat_type='t',\n",
-    "                    output_type='z_score'\n",
+    "                    stat_type=None,\n",
+    "                    output_type='effect_size'\n",
     "            )\n",
     "            stat_maps.append(stat_map)\n",
     "\n",
     "        # Save concatenated betamaps\n",
     "        betamaps_img = nib.concat_images(stat_maps)\n",
-    "        fname = f'sub-{sub}_task-{con}_betamaps.nii.gz'\n",
+    "        fname = f'sub-{sub}_task-prl{con}_betamaps.nii.gz'\n",
     "        nib.save(betamaps_img, join(path_out, fname))  "
    ]
   }
