added new beta-series notebooks

--- a/connectivity_analysis/bsc/dn_bs_03_betaseries_extraction.ipynb
+++ b/connectivity_analysis/bsc/dn_bs_03_betaseries_extraction.ipynb
@@ -47,15 +47,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "atlas = 'meta_roi'\n",
+    "atlas = '300_ROI_Set'\n",
+    "roi_table_fname = 'ROIs_300inVol_MNI_allInfo.txt'\n",
     "\n",
     "masker_kwargs = {\n",
-    "    \"allow_overlap\": False, \n",
-    "    \"standardize\": True, \n",
-    "    \"detrend\": False, \n",
-    "    \"high_pass\": None,\n",
-    "    \"low_pass\": None\n",
-    "}"
+    "    'allow_overlap': True, \n",
+    "    'standardize': True, \n",
+    "    'detrend': False, \n",
+    "    'high_pass': None,\n",
+    "    'low_pass': None\n",
+    "}\n",
+    "\n",
+    "use_mask = False"
    ]
   },
   {
@@ -65,10 +68,7 @@
    "outputs": [],
    "source": [
     "# Load ROI data\n",
-    "df_roi = pd.read_csv(join(path_parcellations, atlas, f'{atlas}_table.csv'))\n",
-    "\n",
-    "# Exclude ROI which is outside of the brain mask for sub m21\n",
-    "df_roi = df_roi.drop(19)\n",
+    "df_roi = pd.read_csv(join(path_parcellations, atlas, roi_table_fname), sep=' ')\n",
     "\n",
     "# Load behavioral data\n",
     "beh, meta = load_behavioral_data(path_beh, verbose=False)\n",
@@ -185,8 +185,6 @@
       "m31 pun\n",
       "m32 rew\n",
       "m32 pun\n",
-      "Sphere around seed #0 is empty\n",
-      "m32 30 pun 1 Sphere around seed #0 is empty\n",
       "m33 rew\n",
       "m33 pun\n"
      ]
@@ -210,16 +208,11 @@
     "\n",
     "            # Get right spheres masker and add right whole-brain mask \n",
     "            masker = maskers[radius]['masker']\n",
-    "            masker.mask_img = mask_img\n",
+    "            if use_mask:\n",
+    "                masker.mask_img = mask_img\n",
     "\n",
     "            # Extract timeseries          \n",
-    "            try:\n",
-    "                betaseries[:, roi_indices] = masker.fit_transform(beta_img)\n",
-    "            except ValueError as err:\n",
-    "                print(sub, sub_idx, con, con_idx, err)\n",
-    "                masker.mask_img = None\n",
-    "                betaseries[:, roi_indices] = masker.fit_transform(beta_img)\n",
-    "\n",
+    "            betaseries[:, roi_indices] = masker.fit_transform(beta_img)\n",
     "                \n",
     "        betaseries_aggregated[sub_idx, con_idx] = betaseries\n",
     "        \n",
